--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,38 @@ h3 {
   text-transform: uppercase;
   border: none;
   padding: 10px 0;
+  cursor: pointer;
 }
 .contaner .contaner__section:nth-child(2) {
   height: 70px;
+}
+.contaner .contaner__section:last-child {
+  width: 280px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 0 10px 0;
+}
+.contaner .contaner__text {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+.contaner .contaner__enter {
+  width: 99px;
+  height: 44px;
+  background-color: transparent;
+  border: 2px solid #BC9CFF;
+  border-radius: 2rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 15px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #BC9CFF;
+  cursor: pointer;
 }
