--- a/scss/log in.scss
+++ b/scss/log in.scss
@@ -7,6 +7,12 @@ body html{
     width: 100%;
     height: 100%;
 }
+a:active, /* активная/посещенная ссылка */
+a:hover,  /* при наведении */
+a {
+  text-decoration: none;
+  color: #BC9CFF;
+}
 h1{
     font-size: 24px;
     margin: 10px 0 10px 0;
@@ -188,11 +194,12 @@ h3{
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 12px;
         font-weight: 700;
-        line-height: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         text-transform: uppercase;
-        text-align: center;
+        position: relative;
         color: #BC9CFF;
-        cursor: pointer;
     }
     .contaner__lable{
         margin: 10px 0 0 0;
