--- a/css/log in.css
+++ b/css/log in.css
@@ -141,7 +141,7 @@ h3 {
 .contaner .contaner__inblck {
   display: flex;
   justify-content: flex-start;
-  margin: 10px 0 25px 0;
+  margin: 16px 0 20px 0;
 }
 .contaner .contaner__radio-lable:first-child {
   margin: 0 10px 0 0;
@@ -269,4 +269,47 @@ h3 {
 .contaner .checkbox__inp:checked + .checkbox__text::after {
   background-color: #BC9CFF;
   left: 24px;
+}
+
+.btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+}
+.btn .contaner__pay {
+  position: absolute;
+  left: 236px;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.box__gradient {
+  width: 98px;
+  height: 43px;
+  outline: none;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #BC9CFF;
+  position: relative;
+  border-radius: 2em;
+}
+
+.box__gradient::before {
+  content: "";
+  width: 102px;
+  height: 47px;
+  background-image: linear-gradient(to top, #BC9CFF 0%, #8BA4F9 100%);
+  position: absolute;
+  z-index: -1;
+  border-radius: 2em;
+  left: -2%;
+  top: -4%;
 }
