--- a/css/log up.css
+++ b/css/log up.css
@@ -86,22 +86,6 @@ h3 {
   letter-spacing: 0em;
   text-align: center;
 }
-.contaner .contaner__enter {
-  width: 99px;
-  height: 44px;
-  background-color: transparent;
-  border: 2px solid #BC9CFF;
-  border-radius: 2rem;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  font-weight: 700;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  position: relative;
-  color: #BC9CFF;
-}
 .contaner .contaner__btn {
   width: 342px;
   height: 44px;
@@ -120,4 +104,49 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  height: 44px;
+}
+.btn .contaner__pay {
+  position: absolute;
+  left: 298px;
+  width: 44px;
+  height: 44px;
+  padding: 3px 0 0 0;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.box__gradient {
+  width: 98px;
+  height: 43px;
+  outline: none;
+  border: none;
+  background-color: white;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #BC9CFF;
+  position: relative;
+  border-radius: 2em;
+}
+
+.box__gradient::before {
+  content: "";
+  width: 102px;
+  height: 47px;
+  background-image: linear-gradient(to top, #BC9CFF 0%, #8BA4F9 100%);
+  position: absolute;
+  z-index: -1;
+  border-radius: 2em;
+  left: -2%;
+  top: -4%;
 }
