--- a/scss/log up.scss
+++ b/scss/log up.scss
@@ -76,27 +76,9 @@ h3{
         letter-spacing: 0em;
         text-align: center;
     }
-    .contaner__enter{
-        width: 99px;
-        height: 44px;
-        background-color: transparent;
-        border: 2px solid #BC9CFF;
-        border-radius: 2rem;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 12px;
-        font-weight: 700;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-transform: uppercase;
-        position: relative;
-        color: #BC9CFF;
-    }
     .contaner__btn{
         width: 342px;
         height: 44px;
-        // margin: 15px 0 18px 0 ;
-        // padding: 5px 10px;
         font-size: 12px;
         font-weight:700;
         border-radius: 2rem;
@@ -105,7 +87,6 @@ h3{
         color: #FFF;
         text-transform: uppercase;
         border: none;
-        // padding: 10px 0;
         cursor: pointer;
     }
     .contaner__section:last-child{
@@ -115,3 +96,47 @@ h3{
         align-items: center;
     }
 }    
+.btn{
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    height: 44px;
+    .contaner__pay{
+        position: absolute;
+        left: 298px;
+        width: 44px;
+        height: 44px;
+        padding: 3px 0 0 0;
+        background-color: transparent;
+        outline: none;
+        border: none;
+        cursor: pointer;
+    }
+}
+
+.box__gradient{
+    width: 98px;
+    height: 43px;
+    outline: none;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #BC9CFF;
+    position: relative;
+    border-radius: 2em;
+    
+}
+.box__gradient::before{
+    content: "";
+    width: 102px;
+    height: 47px;
+    background-image: linear-gradient(to top, #BC9CFF 0%, #8BA4F9 100%);
+    position: absolute;
+    z-index: -1;
+    border-radius: 2em;
+    left: -2%;
+    top: -4%;
+}
