--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,16 @@
   text-align: center;
 }
 
+.contaner__flex {
+  width: 70%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  margin: 100px auto;
+}
+
 .swiper__contaner {
   width: 270px;
   height: 257.5px;
@@ -60,12 +70,38 @@
   top: 128.89px;
   left: 213.75px;
 }
-.swiper__contaner .slide__dot {
+.swiper__contaner .slide__dot, .swiper__contaner .slide__dot-two {
   width: 7.5px;
   height: 7.49px;
   border: 1px solid rgb(255, 255, 255);
   border-radius: 50%;
 }
-.swiper__contaner .active__dot {
+.swiper__contaner .active__dot, .swiper__contaner .active__dot-two {
   background-color: rgb(255, 255, 255);
+}
+
+.swiper__text {
+  width: 234px;
+  height: 67px;
+  border: 2px solid red;
+  margin: 19px 16px 19px 20px;
+  position: relative;
+  display: flex;
+}
+.swiper__text .swiper__inline {
+  width: 234px;
+  height: 33.5px;
+  display: flex;
+  border: 2px solid red;
+}
+.swiper__text .num {
+  font-family: "Quicksand", sans-serif;
+  font-size: 14;
+}
+.swiper__text .sum {
+  font-size: 12px;
+}
+.swiper__text .swiper__inline-under {
+  width: 234px;
+  height: 33.5px;
 }
