--- a/scss/home-page/footer.scss
+++ b/scss/home-page/footer.scss
@@ -21,7 +21,7 @@ ul, li{
     width: 100%;
     height: 372px;
     background-color: #FFF;
-    margin: 200px 0 0 0;
+    // margin: 200px 0 0 0;
     position: relative;
     display: flex;
     // align-items: center;
